--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ limitations under the License.
 <!doctype html>
   <head>
     <meta charset="uft-8">
-    <title>Fireworks!</title>
+    <title>兔年大吉!</title>
     <link href="css/fireworks.css" rel="stylesheet">
   </head>
   <body>
